--- a/p2-1-function-def.ipynb
+++ b/p2-1-function-def.ipynb
@@ -36,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def do_nothing():\n",
+    "    pass"
    ]
   },
   {
@@ -60,11 +61,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['False',\n",
+       " 'None',\n",
+       " 'True',\n",
+       " 'and',\n",
+       " 'as',\n",
+       " 'assert',\n",
+       " 'async',\n",
+       " 'await',\n",
+       " 'break',\n",
+       " 'class',\n",
+       " 'continue',\n",
+       " 'def',\n",
+       " 'del',\n",
+       " 'elif',\n",
+       " 'else',\n",
+       " 'except',\n",
+       " 'finally',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'global',\n",
+       " 'if',\n",
+       " 'import',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'lambda',\n",
+       " 'nonlocal',\n",
+       " 'not',\n",
+       " 'or',\n",
+       " 'pass',\n",
+       " 'raise',\n",
+       " 'return',\n",
+       " 'try',\n",
+       " 'while',\n",
+       " 'with',\n",
+       " 'yield']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import keyword\n",
+    "keyword.kwlist"
    ]
   },
   {
@@ -103,11 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program exits.Bye\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 无参数\n",
+    "def exit_info():\n",
+    "    print(\"Program exits.Bye\")\n",
+    "    return None\n",
+    "\n",
+    "exit_info()"
    ]
   },
   {
@@ -126,11 +186,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2004\n",
+      "2008\n",
+      "2012\n",
+      "2016\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def leap_years(begin,end):\n",
+    "    year = begin\n",
+    "    while year < end:\n",
+    "        if(year % 4 == 0 and year % 100 !=0) or year % 400 == 0:\n",
+    "            print(year)\n",
+    "        year += 1\n",
+    "\n",
+    "leap_years(2000,2020)"
    ]
   },
   {
@@ -160,11 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "bool(None)"
    ]
   },
   {
@@ -185,11 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50/6 get quotient 8 and remainder 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def idiv(a,b):\n",
+    "    quotient = a // b \n",
+    "    remainder = a % b\n",
+    "    return quotient, remainder\n",
+    "\n",
+    "q,r = idiv(50,6)\n",
+    "print(f\"50/6 get quotient {q} and remainder {r}\")\n"
    ]
   },
   {
@@ -215,11 +319,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def increase_one(n):\n",
+    "    n += 1\n",
+    "    return n\n",
+    "\n",
+    "n = 1\n",
+    "print(increase_one(n))\n",
+    "print(n)"
    ]
   },
   {
@@ -276,29 +395,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def greeting(name,msg = 'Hi'):\n",
+    "    print(f'{msg},{name}!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,Neo!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good moring,Neo!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo','Good moring')"
    ]
   },
   {
@@ -326,11 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def greeting(name, msg='Hi', punc='!'):\n",
+    "    print(f'{msg}, {name}{punc}')"
    ]
   },
   {
@@ -342,11 +479,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Neo.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo',punc='.')"
    ]
   },
   {
@@ -364,11 +509,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good nite, Neo.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo', punc='.', msg='Good nite')"
    ]
   },
   {
@@ -389,38 +542,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def say_hi(*names):\n",
+    "    for name in names:\n",
+    "        print('Hi',name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Neo\n",
+      "Hi Trinity\n",
+      "Hi Belle\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo','Trinity','Belle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Neo\n",
+      "Hi Trinity\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo', 'Trinity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Neo\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo')"
    ]
   },
   {
@@ -453,20 +635,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def say_hi(*names, msg='Hi', punc='!'):\n",
+    "    for name in names:\n",
+    "        print(f'{msg}, {name}{punc}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Neo.\n",
+      "Hi, Trinity.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo', 'Trinity', punc='.')"
    ]
   },
   {
@@ -502,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
